[gd_scene load_steps=17 format=3 uid="uid://bmnwkqsfchdef"]

[ext_resource type="Texture2D" uid="uid://s66x23fg6inj" path="res://Assets/Player.png" id="1_ag256"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_iin3y"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_tsc26"]
[ext_resource type="PackedScene" uid="uid://bjk00g7ch5bdo" path="res://Scene/block.tscn" id="2_6hjdr"]
[ext_resource type="PackedScene" uid="uid://cxsoocwb7siid" path="res://Scene/bullet.tscn" id="2_l3roo"]
[ext_resource type="PackedScene" uid="uid://dpqccbw6dt1nk" path="res://Scene/boss.tscn" id="4_ny173"]
[ext_resource type="FontFile" uid="uid://2j5so3ptdpc1" path="res://Assets/FredokaOne-Regular.ttf" id="6_sylp8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8tgtv"]
radius = 80.9707

[sub_resource type="Animation" id="Animation_shqlj"]
resource_name = "invincibility"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.69, 0.89, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 2.9, 3.1, 3.3, 3.5, 3.7, 3.9, 4.1, 4.3, 4.5, 4.7, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.32549), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mbldj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_85y2c"]
_data = {
"RESET": SubResource("Animation_mbldj"),
"invincibility": SubResource("Animation_shqlj")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4u2e"]
bg_color = Color(0.6, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ltcl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_x4dff"]
resource_name = "POP_UP_ANIM"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.380392, 0.854902, 1), Color(1, 0.705882, 0.141176, 1), Color(0.95, 1, 0, 1), Color(0, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0.380392, 0.854902, 1), Color(1, 0.705882, 0.141176, 1), Color(0.95, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vj6kn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ir4o"]
_data = {
"POP_UP_ANIM": SubResource("Animation_x4dff"),
"RESET": SubResource("Animation_vj6kn")
}

[node name="Main" type="Node"]
script = ExtResource("1_tsc26")
block = ExtResource("2_6hjdr")
bullet = ExtResource("2_l3roo")
boss = ExtResource("4_ny173")

[node name="Player" type="Area2D" parent="." groups=["player"]]
position = Vector2(270, 850)
scale = Vector2(0.4, 0.4)
script = ExtResource("1_iin3y")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("1_ag256")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_8tgtv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_85y2c")
}

[node name="Fire_rate" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Block_Timer" type="Timer" parent="."]
wait_time = 1.509
autostart = true

[node name="Invicibility_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Level" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_sylp8")
theme_override_font_sizes/font_size = 36
text = "1"

[node name="xp_bar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rounded = true
show_percentage = false

[node name="health_bar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -1.0
offset_top = 39.0
offset_right = 539.0
offset_bottom = 54.0
theme_override_styles/fill = SubResource("StyleBoxFlat_n4u2e")
value = 100.0
show_percentage = false

[node name="distance_before_boss_bar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 523.0
offset_top = 590.0
offset_right = 527.0
offset_bottom = 940.0
theme_override_styles/fill = SubResource("StyleBoxFlat_5ltcl")
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 106.0
offset_right = 426.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("6_sylp8")
theme_override_font_sizes/font_size = 41
text = "+Fire Rate +DMG"

[node name="POP_UP_ANIM" type="AnimationPlayer" parent="UI/Label"]
libraries = {
"": SubResource("AnimationLibrary_7ir4o")
}

[node name="time_before_Boss_Spawn" type="Timer" parent="."]
wait_time = 4.095
one_shot = true

[node name="Game_Over" type="Control" parent="."]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Game_Over"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.0392157, 0.368627, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Game_Over"]
layout_mode = 0
offset_left = 106.0
offset_top = 461.0
offset_right = 454.0
offset_bottom = 761.0

[node name="Play_again" type="Button" parent="Game_Over/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.898, 0.32, 1)
theme_override_colors/font_hover_color = Color(0.47, 0.42206, 0.1504, 1)
theme_override_fonts/font = ExtResource("6_sylp8")
theme_override_font_sizes/font_size = 65
text = "Play again"

[node name="Main menu" type="Button" parent="Game_Over/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.898039, 0.321569, 1)
theme_override_colors/font_hover_color = Color(0.47, 0.42206, 0.1504, 1)
theme_override_fonts/font = ExtResource("6_sylp8")
theme_override_font_sizes/font_size = 65
text = "Main Menu"

[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
[connection signal="timeout" from="Fire_rate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="Block_Timer" to="." method="_on_block_timer_timeout"]
[connection signal="timeout" from="time_before_Boss_Spawn" to="." method="_on_time_before_boss_spawn_timeout"]
[connection signal="pressed" from="Game_Over/VBoxContainer/Play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Game_Over/VBoxContainer/Main menu" to="." method="_on_main_menu_pressed"]
